--- a/homeworks/01/Weeker_1.ipynb
+++ b/homeworks/01/Weeker_1.ipynb
@@ -18,18 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "#TODO Сделайте калькулятор произвольных выражений, операции следующие: +, -, /, ^, *. скобок нет\n",
     "def calculate(input_str):\n",
-    "    return 0"
+    "    return eval(input_str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +38,8 @@
     "assert calculate(\"3^3 - 10 + 41 * 3\") == 119\n",
     "assert calculate(\"42 / 7 * 32\") == 192.0\n",
     "\n",
+    "assert calculate(\"3*4 + 3\") == 15\n",
+    "assert calculate(\"3^4\") == 7 \n",
     "#TODO Дополнить еще 2-мя своими тестами"
    ]
   },
@@ -50,18 +52,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#TODO метод разворачивающий строку HE2LO -> HELLO (число означает сколько раз встречается буква)\n",
     "def transform_string(inp_string):\n",
-    "    return 0"
+    "    a = \"\"\n",
+    "    out_str = \"\"\n",
+    "    n = 0\n",
+    "    for i in inp_string:\n",
+    "        if i.isdigit():\n",
+    "            a += i\n",
+    "            n = 1\n",
+    "        else:\n",
+    "            if n == 1:\n",
+    "                a1 = int(a)\n",
+    "                a = \"\"\n",
+    "                n = 0\n",
+    "                n1 = \"\"\n",
+    "                for j in range(0,a1,1):\n",
+    "                    n1 += i\n",
+    "                out_str += n1\n",
+    "            else:\n",
+    "                out_str += i\n",
+    "    return out_str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +90,8 @@
     "assert transform_string(\"пр12ивет\") == \"приииииииииииивет\"\n",
     "assert transform_string(\"2л3у78н65тик\") == 'ллуууннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннтттттттттттттттттттттттттттттттттттттттттттттттттттттттттттттттттик'\n",
     "\n",
+    "assert transform_string(\"Pri10Ве9Т\") == \"PriВВВВВВВВВВеТТТТТТТТТ\"\n",
+    "assert transform_string(\"KondratenyaD5awn\") == \"KondratenyaDaaaaawn\"\n",
     "#TODO Дописать 2 своих теста"
    ]
   },
@@ -82,24 +104,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#TODO метод выводящий статистику по строке, кол-во гласных, согласных, цифр, строчных букв, прописных букв\n",
     "def string_stat(inp_string):\n",
-    "    return 0"
+    "    glasn = set(\" ЁёУуЕеАаОоЭэЯяИиЮюЫыОо \")\n",
+    "    sogl = set(\" ЙйЦцКкНнГгШшЩщЗзХхФфВвПпРрЛлДдЖжЧчСсМмТтБб \")\n",
+    "    a1 = 0\n",
+    "    a2 = 0\n",
+    "    a3 = 0\n",
+    "    a4 = 0\n",
+    "    a5 = 0\n",
+    "    for i in inp_string:\n",
+    "        if i in glasn:\n",
+    "            a1 += 1\n",
+    "        if i in sogl:\n",
+    "            a2 += 1\n",
+    "        if i.isdigit():\n",
+    "            a3 += 1\n",
+    "        if i.islower():\n",
+    "            a4 += 1\n",
+    "        if i.isupper():\n",
+    "            a5 += 1\n",
+    "        a = (a1,a2,a3,a4,a5)\n",
+    "    return a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert string_stat(\"Тевирп\") == (2, 4, 0, 5, 1)\n",
     "assert string_stat(\"КоРоВа4\") == (3, 3, 1, 3, 3)\n",
     "\n",
+    "assert string_stat(\"Ст01\") == (0,2,2,1,1)\n",
+    "assert string_stat(\"ПоГоД2\") == (2,3,1,2,3)\n",
     "#TODO 2 своих теста"
    ]
   },
@@ -119,18 +162,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#TODO инвертируйте словарь из k - [v_1, v_2] в v_1 [k_1]\n",
     "def dict_inverter(input_dict):\n",
-    "    return {}"
+    "    rdict = dict()\n",
+    "    for key, value in input_dict.items():\n",
+    "        for i in value:\n",
+    "            if rdict.get(i, 0):\n",
+    "                if isinstance(rdict[i],list):\n",
+    "                    rdict[i].append(key)\n",
+    "                else:\n",
+    "                    buf = rdict[i]\n",
+    "                    rdict[i] = []\n",
+    "                    rdict[i].append(buf)\n",
+    "                    rdict[i].append(key)\n",
+    "            else:\n",
+    "                rdict[i] = key\n",
+    "    return rdict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,6 +194,7 @@
     "assert dict_inverter({\"mango\" : [\"eatable\", \"readable\"]}) == {\"readable\":\"mango\", \"eatable\":\"mango\"}\n",
     "assert dict_inverter({\"mango\" : [\"eatable\"], \"banana\": [\"eatable\"]}) == {\"eatable\": [\"mango\", \"banana\"]}\n",
     "\n",
+    "assert dict_inverter({\"mango\" : [\"eatable\"], \"banana\": [\"eatable\"], \"apple\" : [\"eatable\"]}) == {\"eatable\": [\"mango\", \"banana\", \"apple\"]}\n",
     "#TODO Один свой тест"
    ]
   },
@@ -150,18 +207,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#TODO вывести уникальные элементы массива\n",
     "def uniq_array(input_arr):\n",
-    "    return []"
+    "    a1 = set()\n",
+    "    a2 = []\n",
+    "    for i in input_arr:\n",
+    "        a1.add(i)\n",
+    "    for i in a1:\n",
+    "        a2.append(i)\n",
+    "    return a2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
