--- a/homeworks/01/HW_1.ipynb
+++ b/homeworks/01/HW_1.ipynb
@@ -2,66 +2,198 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "class HashMap:\n",
     "    \n",
     "    class Entry:\n",
+    "        \n",
     "        def __init__(self, key, value):\n",
     "            #TODO store key and value as attributes\n",
+    "            self.key = key\n",
+    "            self.value = value\n",
     "            \n",
     "        def get_key(self):\n",
     "            #TODO return key\n",
+    "            return self.key\n",
     "            \n",
     "        def get_value(self):\n",
     "            #TODO return value\n",
+    "            return self.value\n",
     "            \n",
     "        def __eq__(self, other):\n",
     "            #TODO реализовать функцию сравнения\n",
     "            #Пояснения: self - текущий объект entry, other - какой-то другой объект\n",
     "            #Какое условие на равенство объектов в ассоциативном массиве?\n",
     "            #Если объекты равны, то метод должен возвращать True, иначе False\n",
+    "            return self.key == other.key\n",
     "    \n",
     "    def __init__(self, bucket_num = 64):\n",
     "        #TODO Создать массив для бакетов\n",
-    "\n",
+    "        self.list = []\n",
+    "        self.capacity = bucket_num\n",
+    "        self.cap = self.capacity\n",
+    "        self.list = [None for _ in range(self.capacity)]\n",
+    "        self.counter = 0\n",
+    "            \n",
     "    def get(self, key, default_value=None):\n",
     "        #TODO метод get, возвращающий значение, если оно присутствует, иначе default_value\n",
-    "\n",
+    "        index = hash(key) % self.capacity\n",
+    "        if self.list[index] is None:\n",
+    "            return default_value\n",
+    "        while self.list[index]:\n",
+    "            if self.list[index].key == key:\n",
+    "                return self.list[index].value\n",
+    "            else:\n",
+    "                if index < self.cap - 1:\n",
+    "                    index += 1\n",
+    "                else:\n",
+    "                    return default_value\n",
+    "                \n",
     "    def put(self, key, value):\n",
     "        #TODO метод put, кладет значение по ключу, в случае, если ключ уже присутствует он его заменяет\n",
-    "\n",
+    "        index = hash(key) % self.capacity\n",
+    "        if self.list[index] is None:\n",
+    "            self.list[index] = self.Entry(key,value)\n",
+    "            self.counter += 1\n",
+    "        else:\n",
+    "            if self.list[index].key == key:\n",
+    "                self.list[index].value = value\n",
+    "            else:\n",
+    "                while index < self.capacity and self.list[index] is not None:\n",
+    "                    if self.list[index].key == key:\n",
+    "                        self.list[index].value = value\n",
+    "                        return\n",
+    "                    else:\n",
+    "                        index += 1\n",
+    "                if self.list[index] is None:\n",
+    "                    self.list[index] = self.Entry(key,value)\n",
+    "                    self.counter += 1\n",
+    "                else:\n",
+    "                    self.list.append(self.Entry(key,value))\n",
+    "                    self.counter += 1\n",
+    "                    self.cap += 1\n",
+    "                    \n",
     "    def __len__(self):\n",
     "        #TODO Возвращает количество Entry в массиве\n",
+    "        return self.counter\n",
     "\n",
     "    def _get_hash(self, key):\n",
     "        #TODO Вернуть хеш от ключа, по которому он кладется в бакет\n",
+    "        return hash(key) % self.capacity\n",
+    "    \n",
     "\n",
     "    def _get_index(self, hash_value):\n",
     "        #TODO По значению хеша вернуть индекс элемента в массиве\n",
+    "        return hash_value % self.capacity\n",
+    "    \n",
+    "    class V_Iterator:\n",
     "        \n",
+    "        def __init__(self):\n",
+    "            self.values = []\n",
+    "            \n",
+    "        def get(self, index):\n",
+    "            return self.values[index]\n",
+    "        \n",
+    "        def put(self, value):\n",
+    "            self.values.append(value)\n",
+    "        \n",
+    "        def __iter__(self):\n",
+    "            self.index = 0\n",
+    "            return self\n",
+    "        \n",
+    "        def __next__(self): \n",
+    "            if self.index < len(self.values):\n",
+    "                self.index += 1\n",
+    "                return self.get(self.index - 1)\n",
+    "            else:\n",
+    "                raise StopIteration\n",
+    "    \n",
     "    def values(self):\n",
     "        #TODO Задание со звездочкой!\n",
     "        #Должен возвращать генератор или итератор значений (на самом деле итератор, но не принципиально, через генераторы проще ИМХО)\n",
+    "        self.v_iter = self.V_Iterator()\n",
+    "        for i in self.list:\n",
+    "            if i is not None:\n",
+    "                self.v_iter.put(i.get_value())\n",
+    "        return self.v_iter\n",
     "        \n",
+    "    class K_Iterator:\n",
+    "        \n",
+    "        def __init__(self):\n",
+    "            self.keys = []\n",
+    "            \n",
+    "        def get(self, index):\n",
+    "            return self.keys[index]\n",
+    "        \n",
+    "        def put(self, key):\n",
+    "            self.keys.append(key)\n",
+    "        \n",
+    "        def __iter__(self):\n",
+    "            self.index = 0\n",
+    "            return self\n",
+    "        \n",
+    "        def __next__(self): \n",
+    "            if self.index < len(self.keys):\n",
+    "                self.index += 1\n",
+    "                return self.get(self.index - 1)\n",
+    "            else:\n",
+    "                raise StopIteration\n",
+    "    \n",
     "    def keys(self):\n",
     "        #TODO Задание со звездочкой!\n",
     "        #Должен возвращать генератор или итератор ключей (на самом деле итератор, но не принципиально, через генераторы проще ИМХО)\n",
+    "        self.k_iter = self.K_Iterator()\n",
+    "        for i in self.list:\n",
+    "            if i is not None:\n",
+    "                self.k_iter.put(i.get_key())\n",
+    "        return self.k_iter\n",
     "        \n",
+    "    class I_Iterator:\n",
+    "        def __init__(self):\n",
+    "            self.items = []\n",
+    "                \n",
+    "        def get(self, index):\n",
+    "            return self.items[index]\n",
+    "    \n",
+    "        def put(self, item):\n",
+    "            self.items.append(item)\n",
+    "                \n",
+    "        def __iter__(self):\n",
+    "            self.index = 0\n",
+    "            return self\n",
+    "\n",
+    "        def __next__(self):\n",
+    "            if self.index < len(self.items):\n",
+    "                self.index += 1\n",
+    "                return self.get(self.index - 1)\n",
+    "            else:\n",
+    "                raise StopIteration\n",
+    "    \n",
     "    def items(self):\n",
     "        #TODO Задание со звездочкой!\n",
     "        #Должен возвращать генератор или итератор пар ключ и значение (tuples)\n",
     "        #(на самом деле итератор, но не принципиально, через генераторы проще ИМХО)\n",
+    "        self.i_iter = self.I_Iterator()\n",
+    "        for i in self.list:\n",
+    "            if i is not None:\n",
+    "                self.i_iter.put((i.key, i.value))\n",
+    "        return self.i_iter\n",
     "        \n",
     "    def __str__(self):\n",
-    "        #TODO Метод, вызываемый при вызове print, пофантазируйте, что можно написать"
+    "        #TODO Метод, вызываемый при вызове print, пофантазируйте, что можно написать\n",
+    "        line =\"\"\n",
+    "        for i in self.list:\n",
+    "                if i is not None:\n",
+    "                    line += \"(\" + str(i.key) + \"/\" + str(i.value) + \")\"\n",
+    "        return line"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,17 +201,55 @@
     "   \n",
     "    def get(self, key, default_value=None):\n",
     "        #TODO достаточно переопределить данный метод\n",
+    "        index = hash(key) % self.capacity\n",
+    "        if self.list[index] is None:\n",
+    "            return default_value\n",
+    "        while self.list[index]:\n",
+    "            if self.list[index].key == key:\n",
+    "                return True\n",
+    "            else:\n",
+    "                if index < self.cap - 1:\n",
+    "                    index += 1\n",
+    "                else:\n",
+    "                    return default_value\n",
     "\n",
     "    def put(self, key, value):\n",
     "        #TODO метод put, нужно переопределить данный метод\n",
-    "\n",
+    "        index = hash(key) % self.capacity\n",
+    "        if self.list[index] is None:\n",
+    "            self.list[index] = self.Entry(key,True)\n",
+    "            self.counter += 1\n",
+    "        else:\n",
+    "            if self.list[index].key == key:\n",
+    "                self.list[index].value = True\n",
+    "            else:\n",
+    "                while index < self.capacity and self.list[index] is not None:\n",
+    "                    if self.list[index].key == key:\n",
+    "                        self.list[index].value = True\n",
+    "                        return\n",
+    "                    else:\n",
+    "                        index += 1\n",
+    "                if self.list[index] is None:\n",
+    "                    self.list[index] = self.Entry(key,True)\n",
+    "                    self.counter += 1\n",
+    "                else:\n",
+    "                    self.list.append(self.Entry(key,True))\n",
+    "                    self.counter += 1\n",
+    "                    self.cap += 1\n",
+    "            \n",
     "    def __len__(self):\n",
     "        #TODO Возвращает количество Entry в массиве\n",
-    "\n",
+    "        return self.counter\n",
+    "        \n",
     "    def values(self):\n",
     "        #TODO Задание со звездочкой!\n",
     "        #Если делали, то нужно бы переопределить\n",
-    "        #Должен возвращать генератор или итератор значений (на самом деле итератор, но не принципиально, через генераторы проще ИМХО)"
+    "        #Должен возвращать генератор или итератор значений (на самом деле итератор, но не принципиально, через генераторы проще ИМХО)\n",
+    "        self.v_iter = self.V_Iterator()\n",
+    "        for i in self.list:\n",
+    "            if i is not None:\n",
+    "                self.v_iter.put(True)\n",
+    "        return self.v_iter"
    ]
   }
  ],
