--- a/homeworks/04/regression_hw.ipynb
+++ b/homeworks/04/regression_hw.ipynb
@@ -747,7 +747,7 @@
     "imax = 0\n",
     "for i in np.arange(0. ,1. ,0.01):\n",
     "    regressor3 = Ridge(alpha = i)\n",
-    "    counter = cross_val_score(regressor,X_ltrain,y_ltrain,cv=5)\n",
+    "    counter = cross_val_score(regressor3,X_ltrain,y_ltrain,cv=5)\n",
     "    if max < counter.mean():\n",
     "        max = counter.mean()\n",
     "        imax = i\n",
